k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ioalexander
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: forgejo.ioalexander.com/ioalexander/ioalexander-com:frontend-latest
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: forgejo-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ioalexander
spec:
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ioalexander
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: forgejo.ioalexander.com/ioalexander/ioalexander-com:frontend-latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: forgejo-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ioalexander
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ioalexander-ingress
  namespace: ioalexander
spec:
  ingressClassName: nginx
  rules:
    - host: ioalexander.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
